Update module path to petar-djukic/crumbs
- Update go.mod module declaration
- Update all import paths in Go files
- Update .golangci.yml local-prefixes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -52,7 +52,7 @@ linters-settings:
 
   goimports:
     # Local prefix for import grouping
-    local-prefixes: github.com/dukaforge/crumbs
+    local-prefixes: github.com/petar-djukic/crumbs
 
 issues:
   # Maximum issues per linter (0 = unlimited)
