Mark rel02.1-uc001-issue-tracking-cli as done (generation-2026-02-12-07-13-55-cc8)
All seven issue-tracking CLI commands implemented and tested:
- create: Create new crumbs with issue-tracking fields
- ready: List crumbs ready for work
- update: Update crumb fields and status
- close: Close crumbs by transitioning to pebble state
- show: Display crumb details
- list: Query entities with filters
- comments: Manage comments on crumbs

Integration tests pass and CLI commands verified functional.

--- a/docs/road-map.yaml
+++ b/docs/road-map.yaml
@@ -89,7 +89,7 @@ releases:
     use_cases:
       - id: rel02.1-uc001-issue-tracking-cli
         summary: Issue-tracking CLI commands for scripts
-        status: not_started
+        status: done
       - id: rel02.1-uc002-table-benchmarks
         summary: Benchmark Table operations at scale
         status: not_started
