--- a/docs/road-map.yaml
+++ b/docs/road-map.yaml
@@ -112,7 +112,7 @@ releases:
     use_cases:
       - id: rel03.0-uc001-trail-exploration
         summary: Create trails, add crumbs, complete/abandon
-        status: not_started
+        status: done
       - id: rel03.0-uc002-link-management
         summary: "Link CRUD: belongs_to, child_of, branches_from, scoped_to with graph queries"
         status: not_started
