--- a/docs/road-map.yaml
+++ b/docs/road-map.yaml
@@ -130,7 +130,7 @@ releases:
     use_cases:
       - id: rel03.1-uc001-self-hosting-with-epics
         summary: "Self-hosting with trails as epics: group tasks, belongs_to links, complete/abandon lifecycle"
-        status: not_started
+        status: done
 
   - version: "99.0"
     name: Unscheduled
