--- a/docs/VISION.yaml
+++ b/docs/VISION.yaml
@@ -52,89 +52,77 @@ why_we_build_this: |
   way. We build Crumbs to close this gap: a storage layer purpose-built for the explore-commit-or-
   backtrack pattern, usable by any agent or developer who needs it.
 
+related_projects:
+  - project: Cobbler Scaffold
+    role: Build orchestrator; drives code generation from Crumbs specifications
+  - project: Beads
+    role: Issue tracker used during development; Crumbs aims to replace it for self-hosting
+
 success_criteria:
-  - id: SC1
-    criterion: Operations complete with low latency as crumb counts and concurrent trails grow. We establish performance baselines and refine targets based on real usage patterns.
-  - id: SC2
-    criterion: Developers integrate the Go library quickly. The API is synchronous and type-safe, using a uniform Table interface for all entity types. Adding a new backend takes hours, not days.
-  - id: SC3
-    criterion: Agents create trails for exploration, drop crumbs as they work, and mark trails as abandoned or completed. Trail-based exploration feels natural for any agent that needs to try approaches, backtrack from dead ends, and commit successful paths.
+  performance: |
+    Operations complete with low latency as crumb counts and concurrent trails grow. We establish
+    performance baselines and refine targets based on real usage patterns.
+  developer_experience: |
+    Developers integrate the Go library quickly. The API is synchronous and type-safe, using a
+    uniform Table interface for all entity types. Adding a new backend takes hours, not days.
+  exploration_support: |
+    Agents create trails for exploration, drop crumbs as they work, and mark trails as abandoned
+    or completed. Trail-based exploration feels natural for any agent that needs to try approaches,
+    backtrack from dead ends, and commit successful paths.
 
 implementation_phases:
-  - phase: 1
-    name: Core Storage with SQLite Backend
+  - phase: "01.0"
     focus: Implement the Cupboard and Table interfaces with SQLite backend. Validates core concepts and provides a working system for local use.
-    deliverables:
-      - Cupboard interface with Attach, Detach, GetTable
-      - Table interface with Get, Set, Delete, Fetch
-      - Crumb entity with state transitions
-      - SQLite backend with JSONL persistence
-      - Basic CLI commands
-
-  - phase: 2
-    name: Post-Core Validation
-    focus: Validate with installation, persistence, and round-trip scenarios. Requires only phase 1 features.
-    deliverables:
-      - cupboard installs via go install
-      - JSONL files survive database deletion
-      - Config loading and generic table CLI validated
-
-  - phase: 3
-    name: Properties with Enforcement
+    deliverables: |
+      Cupboard interface with Attach, Detach, GetTable. Table interface with Get, Set, Delete,
+      Fetch. Crumb entity with state transitions. SQLite backend with JSONL persistence. Basic
+      CLI commands.
+  - phase: "01.1"
+    focus: Validate with installation, persistence, and round-trip scenarios. Requires only phase 01.0 features.
+    deliverables: |
+      cupboard installs via go install. JSONL files survive database deletion. Config loading
+      and generic table CLI validated.
+  - phase: "02.0"
     focus: Implement the property system with automatic initialization and backfill.
-    deliverables:
-      - Property and Category entities
-      - Property access via Table interface
-      - Built-in property seeding (priority, type, description, owner, labels)
-      - Property enforcement (auto-initialization on crumb creation, backfill on definition)
-
-  - phase: 4
-    name: Issue-Tracking and Self-Hosting
+    deliverables: |
+      Property and Category entities. Property access via Table interface. Built-in property
+      seeding (priority, type, description, owner, labels). Property enforcement
+      (auto-initialization on crumb creation, backfill on definition).
+  - phase: "02.1"
     focus: Validate cupboard as an issue tracker with CLI commands, benchmarks, and self-hosting.
-    deliverables:
-      - Issue-tracking CLI commands (ready, create, show, update, close, comments add)
-      - Table benchmark suite
-      - Self-hosting (crumbs tracks its own development)
-      - Metadata lifecycle (comments, attachments, cascade delete)
-
-  - phase: 5
-    name: Trails and Stashes
+    deliverables: |
+      Issue-tracking CLI commands (ready, create, show, update, close, comments add). Table
+      benchmark suite. Self-hosting (crumbs tracks its own development). Metadata lifecycle
+      (comments, attachments, cascade delete).
+  - phase: "03.0"
     focus: Implement trail lifecycle for exploratory workflows and stash for shared state coordination.
-    deliverables:
-      - Trail entity with Complete and Abandon lifecycle methods
-      - Stash entity with SetValue, Increment, Acquire, Release, GetHistory
-      - Link management (belongs_to, child_of, branches_from, scoped_to)
-      - Atomic cleanup on trail abandonment
-
-  - phase: 6
-    name: Post-Trails Validation
+    deliverables: |
+      Trail entity with Complete and Abandon lifecycle methods. Stash entity with SetValue,
+      Increment, Acquire, Release, GetHistory. Link management (belongs_to, child_of,
+      branches_from, scoped_to). Atomic cleanup on trail abandonment.
+  - phase: "03.1"
     focus: Validate trails functionality with self-hosting scenarios using trails as epic equivalents.
-    deliverables:
-      - Self-hosting with trail-based epics works end-to-end
-
-  - phase: 7
-    name: Unscheduled
+    deliverables: |
+      Self-hosting with trail-based epics works end-to-end.
+  - phase: "99.0"
     focus: Use cases not yet assigned to a release. Includes workflow templates (blazes) and Docker bootstrap.
-    deliverables: []
+    deliverables: |
+      Unscheduled use cases to be prioritized in future releases.
 
 risks:
-  - id: R1
-    risk: Backend proliferation without clear interface boundary
+  - risk: Backend proliferation without clear interface boundary
     impact: High
     likelihood: Low
     mitigation: The Cupboard interface is the single contract all backends implement. prd001-cupboard-core defines this contract precisely. Non-standard extensions must not appear in the interface.
-  - id: R2
-    risk: Property schema complexity outpacing the enforcement mechanism
+  - risk: Property schema complexity outpacing the enforcement mechanism
     impact: Medium
     likelihood: Medium
     mitigation: Properties are first-class entities with typed values and automatic backfill. The design explicitly rejects the "not set" concept; every crumb always has a value for every property.
-  - id: R3
-    risk: Trail abandonment leaving orphaned crumbs
+  - risk: Trail abandonment leaving orphaned crumbs
     impact: High
     likelihood: Low
     mitigation: The belongs_to link is never deleted. The backend cascade on Abandon transitions crumbs to dust. Crumbs without a belongs_to link are detected as orphans.
-  - id: R4
-    risk: JSONL files diverging from SQLite state on crash
+  - risk: JSONL files diverging from SQLite state on crash
     impact: High
     likelihood: Low
     mitigation: JSONL is the source of truth. SQLite is rebuilt from JSONL on every Attach. Writes use atomic rename (temp file, fsync, rename) to prevent partial writes.
