--- a/docs/road-map.yaml
+++ b/docs/road-map.yaml
@@ -2,83 +2,134 @@ id: crumbs
 title: Crumbs Roadmap
 
 releases:
-  - id: rel01.0
+  - version: "01.0"
     name: Core Storage with SQLite Backend
-    focus: Implement the Cupboard and Table interfaces with SQLite backend. An agent can create, query, and manage crumbs via the Table interface.
+    status: done
+    description: |
+      Implement the Cupboard and Table interfaces with SQLite backend. An agent
+      can create, query, and manage crumbs via the Table interface.
     use_cases:
       - id: rel01.0-uc001-cupboard-lifecycle
+        summary: Configuration and Cupboard Lifecycle
         status: done
       - id: rel01.0-uc002-table-crud
+        summary: Table Interface CRUD Operations
         status: done
       - id: rel01.0-uc003-crumb-lifecycle
+        summary: Crumb Entity Operations
         status: done
       - id: rel01.0-uc004-scaffolding-validation
+        summary: Scaffolding Validation
         status: done
       - id: rel01.0-uc005-crumbs-table-benchmarks
+        summary: Crumbs Table Performance Benchmarks
         status: done
 
-  - id: rel01.1
+  - version: "01.1"
     name: Post-Core Validation
-    focus: Validate the core storage layer with installation, persistence, and round-trip scenarios. Requires only rel01.0 features.
+    status: done
+    description: |
+      Validate the core storage layer with installation, persistence, and
+      round-trip scenarios. Requires only rel01.0 features.
     use_cases:
       - id: rel01.1-uc001-go-install
+        summary: Go Install
         status: done
       - id: rel01.1-uc002-jsonl-git-roundtrip
+        summary: JSONL Git Roundtrip
         status: done
       - id: rel01.1-uc003-configuration-loading
+        summary: Configuration and Path Resolution
         status: done
       - id: rel01.1-uc004-generic-table-cli
+        summary: Generic Table CLI Operations
         status: done
       - id: rel01.1-uc005-flat-self-hosting
+        summary: Flat Self-Hosting
         status: done
 
-  - id: rel02.0
+  - version: "02.0"
     name: Properties with Enforcement
-    focus: Implement the property system with automatic initialization and backfill. Every crumb always has a value for every defined property.
+    status: done
+    description: |
+      Implement the property system with automatic initialization and backfill.
+      Every crumb always has a value for every defined property.
     use_cases:
       - id: rel02.0-uc001-property-enforcement
+        summary: Property Enforcement
         status: done
       - id: rel02.0-uc002-regeneration-compatibility
+        summary: Regeneration Compatibility
         status: done
 
-  - id: rel02.1
+  - version: "02.1"
     name: Issue-Tracking and Self-Hosting
-    focus: Validate cupboard as an issue tracker with CLI commands, benchmarks, and self-hosting. Requires properties (rel02.0) for type, priority, and labels.
+    status: done
+    description: |
+      Validate cupboard as an issue tracker with CLI commands, benchmarks, and
+      self-hosting. Requires properties (rel02.0) for type, priority, and labels.
     use_cases:
       - id: rel02.1-uc001-issue-tracking-cli
+        summary: Issue-Tracking CLI
         status: done
       - id: rel02.1-uc002-table-benchmarks
+        summary: Table Benchmarks
         status: done
       - id: rel02.1-uc003-self-hosting
+        summary: Self-Hosting
         status: done
       - id: rel02.1-uc004-metadata-lifecycle
+        summary: Metadata Lifecycle Operations
         status: done
 
-  - id: rel03.0
+  - version: "03.0"
     name: Trails and Stashes
-    focus: Implement trail lifecycle for exploratory workflows and stash for shared state coordination. An agent can explore implementation approaches with trails, abandoning failed attempts and completing successful ones.
+    status: done
+    description: |
+      Implement trail lifecycle for exploratory workflows and stash for shared
+      state coordination. An agent can explore implementation approaches with
+      trails, abandoning failed attempts and completing successful ones.
     use_cases:
       - id: rel03.0-uc001-trail-exploration
+        summary: Trail-Based Exploration
         status: done
       - id: rel03.0-uc002-link-management
+        summary: Link Management
         status: done
       - id: rel03.0-uc003-stash-operations
+        summary: Stash Operations
         status: done
       - id: rel03.0-uc004-trail-crumb-lifecycle
+        summary: Trail-Crumb Lifecycle Control
         status: done
 
-  - id: rel03.1
+  - version: "03.1"
     name: Post-Trails Validation
-    focus: Validate trails functionality with self-hosting scenarios. Agents create trails as epics, add crumbs as tasks, and use trail lifecycle to finalize or discard grouped work.
+    status: done
+    description: |
+      Validate trails functionality with self-hosting scenarios. Agents create
+      trails as epics, add crumbs as tasks, and use trail lifecycle to finalize
+      or discard grouped work.
     use_cases:
       - id: rel03.1-uc001-self-hosting-with-epics
+        summary: Self-Hosting with Epics via Trails
         status: done
 
-  - id: rel99.0
+  - version: "99.0"
     name: Unscheduled
-    focus: Use cases not yet assigned to a release. These will be scheduled as the roadmap evolves.
+    status: not started
+    description: |
+      Use cases not yet assigned to a release. These will be scheduled as the
+      roadmap evolves.
     use_cases:
       - id: rel99.0-uc001-blazes-templates
+        summary: Agent Uses Blazes (Workflow Templates)
         status: not_started
       - id: rel99.0-uc002-docker-bootstrap
+        summary: Docker Bootstrap (Docs to Working System)
         status: not_started
+
+prioritization:
+  - Focus on earliest incomplete release
+  - Later use cases can be partially implemented if they share functionality with the current release
+  - Each issue should map to a use case in the roadmap
